Fix on Firefox

--- a/css/bodystyle.css
+++ b/css/bodystyle.css
@@ -37,7 +37,7 @@ h3 {
 
 h4 {
   font-weight: 700;
-  font-size: large;
+  font-size: 16px;
   margin-left: 10px;
   width: 200px;
   line-height: 0px;
