--- a/css/mediaqueriesmobile.css
+++ b/css/mediaqueriesmobile.css
@@ -209,6 +209,7 @@
     margin: 0 !important;
     margin-left: 10px !important;
     margin-top: 15px !important;
+    width: 200px !important;
   }
 
   .cards1 p,
