--- a/css/mediaqueriestab.css
+++ b/css/mediaqueriestab.css
@@ -39,6 +39,7 @@
     width: 120% !important;
     max-height: 60px !important;
     line-height: 15px;
+    width: 200px !important;
   }
   .cards-populaire p {
     width: 120% !important;
